--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">LoitpBaseMaster</string>
+    <string name="app_name">UIZA</string>
     <string name="open_drawer">open_drawer</string>
     <string name="close_drawer">close_drawer</string>
 
