--- a/corebase/src/main/res/values/strings.xml
+++ b/corebase/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <!--TODO-->
     <string name="str_f"></string>
     <string name="err">Error</string>
+    <string name="err_unknow">Unknow Error</string>
     <string name="confirm">Confirm</string>
 
 
