--- a/demouiza/src/main/res/values/strings.xml
+++ b/demouiza/src/main/res/values/strings.xml
@@ -1,7 +1,5 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="app_name">UIZA</string>
-
-
+    <string name="app_name">UIZA Demo</string>
     <string-array name="occurence">
         <item>Once</item>
         <item>Weekly</item>
