--- a/demouiza/src/main/res/values/strings.xml
+++ b/demouiza/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="confirm">Confirm</string>
     <string name="load_page">Tải trang</string>
     <string name="login">Đăng Nhập</string>
+    <string name="press_again_to_exit">Press once again to exit!</string>
 </resources>
